# jackdaw

./: .gitignore  CLAUDE.md  Makefile  README.md  app.go  electron-builder.yml  go.mod  go.sum  index.html  install.sh  main.go  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  wails.json
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-04-07T02-21-36-790Z.yml  page-2026-04-07T02-22-59-489Z.yml  page-2026-04-07T02-23-41-954Z.yml  page-2026-04-07T02-24-18-571Z.yml  page-2026-04-07T02-25-18-727Z.yml
cmd/jackdaw-cli/: main.go  main_test.go
docs/: ROADMAP.md
docs/design/: colors_and_type.css  index.html
docs/plans/: 2026-04-09-cli-socket-api.md  2026-04-09-workspaces.md  agent-status-dashboard.md  diff-viewer.md  embedded-browser-pane.md  error-detection.md  settings-editor.md  sidebar-mini-dashboard.md  worktree-isolation-plan.md  worktree-isolation.md
docs/specs/: 2026-04-09-cli-socket-api-design.md  2026-04-09-session-hooks-design.md  2026-04-09-workspaces-design.md  settings-editor.md  sidebar-mini-dashboard.md
frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
internal/ansi/: ansi.go  ansi_test.go
internal/api/: handler.go  handler_test.go  methods.go  server.go  server_test.go  stream.go  stream_test.go
internal/config/: config.go  config_test.go
internal/hooks/: hooks.go  hooks_test.go
internal/manifest/: manifest.go  manifest_test.go
internal/notification/: ansi.go  ansi_test.go  desktop.go  desktop_test.go  errordetector.go  errordetector_test.go  hooklistener.go  hooklistener_test.go  notification.go  notification_test.go  pattern.go  pattern_test.go
internal/proxy/: proxy.go
internal/relay/: buffer.go  buffer_test.go  client.go  client_test.go  cmd.go  protocol.go  protocol_test.go  server.go  server_fanout_race_test.go  server_history_test.go  server_sigcont_test.go  server_test.go
internal/session/: manager.go  manager_test.go  session.go  session_test.go  statustracker.go  statustracker_test.go
internal/terminal/: terminal.go  terminal_test.go
internal/workspace/: workspace.go
internal/worktree/: diff.go  diff_test.go  merge.go  merge_test.go  worktree.go  worktree_test.go
internal/wsserver/: coalescer.go  coalescer_test.go  server.go
scripts/: release.sh
src/: app.css  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  db.rs  hooks.rs  http.rs  ipc.rs  lib.rs  main.rs  notification.rs  notify.rs  preview.rs  pty.rs  send.rs  server.rs  state.rs  tray.rs  updater.rs
src-tauri/tests/: ipc_integration.rs  socket_api.rs
src/commands/: spawn-session.ts  workbench.ts
src/desktop/: main.ts  packaging.test.ts  preload.cts
(+330 files in other folders)
