[package]
name = "jackdaw"
version = "0.2.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "jackdaw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jackdaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "unstable"] }
url = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
interprocess = { version = "2", features = ["tokio"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
indexmap = { version = "2", features = ["serde"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
